<resources>
    <string name="app_name">ShareLibrary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_image_description">Logo Image</string>
    <string name="registration_label">REGISTRATION</string>
    <string name="full_name_label">Full name*</string>
    <string name="password_hint">Password*</string>
    <string name="email_hint">Email*</string>
    <string name="username_hint">Username*</string>
    <string name="full_name_hint">Full Name*</string>
    <string name="city_hint">City</string>
    <string name="country_hint">Country</string>
    <string name="register_button_text">REGISTER</string>
    <string name="have_an_account_text">You have an account?</string>
    <string name="sign_in_text">Sign in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_books">Books</string>
    <string name="title_exchanges">Exchanges</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="field_required_error">This field is required</string>
    <string name="invalid_password_error">Password have to contain minimum eight characters, at least one uppercase letter, one lowercase letter, one number and one special character:</string>
    <string name="invalid_email_error">This email address is invalid</string>
    <string name="login_title_text">Login</string>
    <string name="not_account">Don\'t have an account?</string>
    <string name="sign_up_text">Sign up</string>
    <string name="login_button">Login</string>
    <string name="username_or_email_hint">Username or email*</string>
    <string name="error_unknown">Ops… Something went wrong.</string>
    <string name="error_bad_request">Validation error. Please check input parameters.</string>
    <string name="error_internal">We have a server-side problem. Try again in a few minutes.</string>
    <string name="username_exists_error">This username already exists.</string>
    <string name="email_exists_error">This email already exists.</string>
    <string name="user_not_found_error">Not found this user.</string>
    <string name="invalid_user_name_email_or_password_error">Invalid username, email or password.</string>
    <string name="error_forbidden">You need to be logged in.</string>
    <string name="error_not_found">Could not found resource</string>
    <string name="error_found">It\'s already exists.</string>
    <string name="error_connect">Could not connect to server</string>
    <string name="search_title">Search book</string>
    <string name="filter_title">Filter</string>
    <string name="not_found_add_new">Book not found. Add new?</string>
    <string name="save_book">Save Book</string>
    <string name="title_hint">Title</string>
    <string name="authors_surname_hint">surname</string>
    <string name="author_name_hint">name</string>
    <string name="save_login_details">Save login details</string>
    <string name="coordinates_label">Your coordinates:</string>
    <string name="change_details">Edit</string>
    <string name="save_changes">Save changes</string>
    <string name="cancel_changes">Cancel</string>
    <string name="location_access_title">Location access</string>
    <string name="get_location_message">We need access to location to get your current coordinate</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="accept_button_text">Accept</string>
    <string name="empty_coordinates">0.0, 0.0</string>
    <string name="logout_text">Logout</string>
    <string name="get_photo_image_description">Image of camera</string>
    <string name="books_cover_description">Image of book\'s cover</string>
    <string name="new_book_menu_title">NEW</string>
    <string name="save_new_book_toolbar_subtitle">Save new book</string>
    <string name="books_item_remove_book">Remove</string>
    <string name="share_book">Share</string>
    <string name="three_dots">⋮</string>
    <string name="authors_label">Authors:</string>
    <string name="deposit_label_text">Deposit: </string>
    <string name="deposit_value_hint">0.00</string>
    <string name="default_location">default location</string>
    <string name="current_location">current location</string>
    <string name="location_label">Your location:</string>
    <string name="book_status_exchanged">Exchanged</string>
    <string name="book_status_during_exchange">Shared</string>
    <string name="book_status_at_owner">At owner</string>
    <string name="books_item_cancel_exchange">Cancel</string>
    <string name="user_details">User Details</string>
    <string name="status_label">Status:</string>
    <string name="finish_exchange">Finish</string>
    <string name="request_book">Request Book</string>
    <string name="user_profile">Show profile</string>
    <string name="send_message">Send a message</string>
    <string name="view_books">View books</string>
    <string name="remove_book_message">Are you sure you want to remove this book?\nThis option is permanent</string>
    <string name="already_requested_book">You requested this book</string>
    <string name="title_home">Home</string>
    <string name="owner_label">Owner</string>
    <string name="share_by">Shared by:</string>
    <string name="enter_message_hint">Enter message</string>
    <string name="chat_room_send_button">SEND</string>
    <string name="chat_search_view_hint">find person</string>
    <string name="choose_categories">Choose your categories</string>
    <string name="categories_button">Categories</string>
    <string name="category_label">Category:</string>
    <string name="sort_title">sort</string>
    <string name="sort_by_title_asc">Title from A to Z</string>
    <string name="sort_by_title_desc">Title from Z to A</string>
    <string name="sort_by_distance_asc">Distance from the nearest</string>
    <string name="sort_by_distance_desc">Distance from the farthest</string>
    <string name="filter_button">Filter</string>
    <string name="reset_button">Reset</string>
    <string name="distance_label">Distance: </string>
    <string name="add_book_fab_text">ADD BOOK</string>
    <string name="exchange_button_text">Exchange</string>
    <string name="show_on_map"><u>Show on map</u></string>
    <string name="center_map_button_description">Button to center user position</string>
    <string name="book_condition_label">Book Condition: </string>
    <string name="book_condition_new">New</string>
    <string name="book_condition_good">Good</string>
    <string name="book_condition_bad">Bad</string>
    <string name="language_hint">Language</string>
    <string name="language_label">Language:</string>
    <string name="condition_label">Condition:</string>
    <string name="cancel_sharing">Cancel Sharing</string>
    <string name="search_book_author">Title, author</string>
    <string name="distance_max_value">100 km</string>
    <string name="not_found_exchanges">Not found</string>
</resources>