<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.MaterialComponents.Light.Dialog.Alert">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_title"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_16"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#dfdfdf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_marginVertical="@dimen/dp_8">

                <TextView
                    android:id="@+id/dialog_filters_distance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_label"
                    android:textColor="@color/black"
                    android:layout_marginHorizontal="@dimen/dp_8"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/dialog_filters_distance_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:np_orientation="horizontal"
                    app:np_textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#dfdfdf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dialog_filters_category_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/category_label"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/dialog_filters_chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_16" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/dialog_filters_reset_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_button" />

                <Button
                    android:id="@+id/dialog_filters_cancel_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_button_text"
                    android:layout_toStartOf="@id/dialog_filters_filter_button" />

                <Button
                    android:id="@+id/dialog_filters_filter_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_button"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>